--- a/spring-boot-api-tutorial/src/main/resources/application.properties
+++ b/spring-boot-api-tutorial/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=2222
 
+server.servlet.context-path=/sbcrud
+
 spring.datasource.url = jdbc:mysql://localhost:3306/sbdb?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
@@ -7,4 +9,4 @@ spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
-spring.profiles.active=dev, uat
+spring.profiles.active=dev
