added end point in properties

--- a/spring-boot-api-tutorial/src/main/resources/application.properties
+++ b/spring-boot-api-tutorial/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 spring.profiles.active=dev
+
+
+management.endpoints.web.exposure.exclude=*
